# rust-ice

./: .gitignore  Cargo.toml  db.py  docker-compose.yml  product_finder.py  requirements.txt  scraper.py
src/: auth.rs  db.rs  main.rs
templates/: base.html  debug_dashboard.html  inflation.html  landing.html  login.html  register.html  search.html  styles.css
