[package]
name = "supermarket-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
async-trait = "0.1.74"
axum = "0.7.0"
axum-login = "0.10.2"
chrono = "0.4.31"
dotenv = "0.15.0"
password-auth = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "chrono"] }
time = "0.3.30"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-sessions = "0.7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
